Fix list layout problems

--- a/src/css/includes/1050/list.scss
+++ b/src/css/includes/1050/list.scss
@@ -1,10 +1,10 @@
 #list-wrap {
 	@extend .border-box;
-	margin-right: 40px;
-	width: calc(100% - 150px);
+	margin-right: 20px;
+	width: calc(100% - 130px);
 }
 #list-left {
-	width: 100%;
+	width: 75%;
 }
 #list-tabs-wrap {
 	width: 100%;
@@ -30,26 +30,6 @@
 .list-item-title {
 	max-width: 38%;
 }
-
-// Right profile part
 #list-right {
-	width: 100%;
-	@include box-shadow(none);
-	@include border-top-left-radius(4px);
-}
-#list-profile-background {
-	@include border-top-left-radius(4px);
-}
-.list-nav {
-	@extend .cf;
-}
-.list-nav-item {
-	@extend .border-box;
-	float: left;
-}
-.list-nav-tag, .list-nav-private {
-	margin-left: 10px;
-}
-.list-nav-sep {
-	clear: both;
+	width: 25%;
 }
